[package]
name = "tsc-timer"
version = "0.1.5"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"
description = "Time stamp counter (TSC) based timer"
documentation = "https://docs.rs/crate/tsc-timer/"
homepage = "https://github.com/gnzlbg/tsc"
repository = "https://github.com/gnzlbg/tsc"
keywords = ["tsc", "time", "stamp", "counter", "measurement" ]
categories = ["hardware-support", "no-std", "date-and-time"]
license = "MIT/Apache-2.0"
readme = "readme.md"

[badges]
appveyor = { repository = "gnzlbg/tsc" }
travis-ci = { repository = "gnzlbg/tsc" }
codecov = { repository = "gnzlbg/tsc" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/tsc" }
is-it-maintained-open-issues = { repository = "gnzlbg/tsc" }
maintenance = { status = "experimental" }
